# SpriterificMadHacademic

./: .env.example  .gitignore  CHANGELOG.md  LICENSE  NOTICE  README.md  SETUP-MADHACKADEMIE.md  pyproject.toml  test.txt
docs/: README.md  cles-api.md  commandes-cli.md  imagegen-spritesheet-pipeline.md  installation.md  lancement.md  operator-guide.md  size-contracts.md  studio-readme.md  tutoriel.md  walk-cycle-video-pipeline.md  workflow-aventure-point-and-click.md  workspace-contract.md
src/spriterrific/: __init__.py  __main__.py  action_batch.py  anchor_wizard.py  anchor_wizard_gui.py  anchors.py  api.py  app_icon.py  bootstrap_anchors.py  bria.py  cells.py  chroma.py  cli.py  commands.py  discovery.py  events.py  finalize_runtime.py  fonts.py  frame_aligner.py  frame_clean.py  frame_picker.py  frame_sheet.py  guides.py  manifest.py  media.py  pack.py  paths.py  pipeline.py  pixel_snap.py  post_selection.py  preprocess.py  presets.py  prompts.py  review_index.py  runids.py  scale.py  sheet_guides.py  size_contract.py  skill_install.py  sprite_cleanup.py  (+2 more)
src/spriterrific.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/spriterrific/skills/spriterrific/: SKILL.md
src/spriterrific/web/: app.js  index.html  styles.css
tests/: test_anchor_wizard.py  test_anchor_wizard_gui.py  test_anchors.py  test_bootstrap_anchors.py  test_bria.py  test_cells.py  test_chroma.py  test_discovery.py  test_finalize_runtime.py  test_fonts.py  test_frame_aligner.py  test_frame_clean.py  test_frame_picker.py  test_frame_sheet.py  test_media.py  test_pack_manifest.py  test_pipeline.py  test_pixel_snap.py  test_post_selection.py  test_preprocess.py  test_presets.py  test_prompts.py  test_runids.py  test_scale.py  test_sheet_guides.py  test_size_contract.py  test_skill_install.py  test_sprite_cleanup.py
(+14 files in other folders)
